# FormMaster

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  config.py  database.py  main.py  pyproject.toml  seed.py
.claude/specs/: 01_setup_projeto.md  02_autenticacao.md  03_formularios_crud.md  04_wizard_ia.md  05_editor_frontend.md  06_motor_regras.md  07_submissao_respostas.md  08_respondente_ui.md  09_dashboard.md
alembic/: env.py
alembic/versions/: 0d3b1e5ff18f_cria_tabela_users.py  c3a9d87b4e21_cria_tabela_responses.py  fa413121fefe_cria_tabelas_formularios.py
auth/: modelos.py  orm.py  rotas.py  servicos.py
dashboard/: modelos.py  rotas.py  servicos.py
formularios/: modelos.py  orm.py  repositorio.py  rotas.py  servicos.py
ia/: construtor_prompt.py
respostas/: modelos.py  motor.py  orm.py  repositorio.py  rotas.py  servicos.py
static/css/: base.css  dashboard.css  editor.css  respondente.css
static/js/: editor.js
templates/auth/: cadastro.html  login.html
templates/dashboard/: index.html  painel_formulario.html
templates/editor/: editor.html
templates/responder/: encerrado.html  fim.html  formulario.html
templates/wizard_ia/: wizard.html
tests/respostas/: test_motor.py
