[project]
name = "formmaster"
version = "0.1.0"
description = "Plataforma web de formulários com triagem automática via IA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "google-genai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
